--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 :root {
     --first-accent-color: #2196F3;
     --second-accent-color: #188CE8;
-    --logo-color: #000000;
     --first-background-color: #FFFFFF;
     --second-background-color: #C4C4C4;
     --third-background-color: #F5F4FA;
@@ -64,22 +63,32 @@ body {
     border-bottom: 1px solid #ECECEC
 }
 
-.header-container {
+.header__container {
     display: flex;
     align-items: center;
 }
 
-.header-list {
+.nav__list {
     display: flex;
 }
 
-.header-logo {
+.logo {
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    color: var(--logo-color);
+}
+
+.logo--light {
+    color: var(--third-text-color);
+}
+
+.logo--dark {
+    color: var(--first-text-color);
+}
+
+.header__logo {
     margin-right: 93px;
     padding-top: 24px;
     padding-bottom: 24px;
@@ -89,11 +98,11 @@ body {
     color: var(--first-accent-color);
 }
 
-.header-item:not(:last-child) {
+.nav__item:not(:last-child) {
     margin-right: 50px;
 }
 
-.header-link {
+.nav__link {
     position: relative;
     font-weight: 500;
     font-size: 14px;
@@ -105,8 +114,8 @@ body {
     transition: color 250ms var(--timing-function);
 }
 
-.header-link:hover,
-.header-link:focus {
+.nav__link:hover,
+.nav__link:focus {
     color: var(--first-accent-color);
 }
 
@@ -114,7 +123,7 @@ body {
     color: var(--first-accent-color);
 }
 
-.header-link.current::after {
+.nav__link.current::after {
     content: '';
     position: absolute;
     width: 100%;
@@ -125,8 +134,12 @@ body {
     bottom: -1px;
 }
 
-.header-mail,
-.header-tel {
+.connect__list {
+    display: flex;
+}
+
+.connect__mail,
+.connect__tel {
     display: flex;
     align-items: center;
     font-weight: 500;
@@ -139,26 +152,26 @@ body {
     transition: color 250ms var(--timing-function);
 }
 
-.header-mail:hover,
-.header-tel:hover {
+.connect__mail:hover,
+.connect__tel:hover {
     color: var(--first-accent-color);
 }
 
-.header-mail:focus,
-.header-tel:focus {
+.connect__mail:focus,
+.connect__tel:focus {
     color: var(--first-accent-color);
 }
 
-.header-item-connect:not(:last-child) {
+.connect__item:not(:last-child) {
     margin-right: 30px;
 }
 
-.header-connect {
+.connect {
     margin-left: auto;
 }
 
-.header-mail-icon,
-.header-tel-icon {
+.connect__mail-icon,
+.connect__tel-icon {
     fill: currentColor;
     margin-right: 10px;
 }
@@ -181,7 +194,7 @@ body {
     background-size: cover;
 }
 
-.hero-title {
+.hero__title {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -192,7 +205,7 @@ body {
     margin-bottom: 30px;
 }
 
-.hero-btn {
+.hero__btn {
     font-family: inherit;
     background-color: var(--first-accent-color);
     font-weight: 700;
@@ -211,8 +224,8 @@ body {
         background-color 250ms var(--timing-function);
 }
 
-.hero-btn:hover,
-.hero-btn:focus {
+.hero__btn:hover,
+.hero__btn:focus {
     color: var(--third-text-color);
     background-color: var(--second-accent-color);
 }
@@ -235,7 +248,7 @@ body {
     padding-bottom: 47px;
 }
 
-.features-list {
+.features__list {
     display: flex;
 }
 
@@ -255,7 +268,7 @@ body {
     background-image: url(../images/astronaut.svg);
 }
 
-.features-item::before {
+.features__item::before {
     display: block;
     content: "";
     height: 120px;
@@ -266,11 +279,11 @@ body {
     border-radius: 4px;
 }
 
-.features-item:not(:last-child) {
+.features__item:not(:last-child) {
     margin-right: 30px;
 }
 
-.features-title {
+.features__title {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -280,7 +293,7 @@ body {
     margin-bottom: 10px;
 }
 
-.features-text {
+.features__text {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -293,11 +306,11 @@ body {
     padding-bottom: 94px;
 }
 
-.about-list {
+.about__list {
     display: flex;
 }
 
-.about-title {
+.about__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -307,15 +320,15 @@ body {
     margin-bottom: 50px;
 }
 
-.about-item {
+.about__item {
     position: relative;
 }
 
-.about-item:not(:last-child) {
+.about__item:not(:last-child) {
     margin-right: 30px;
 }
 
-.about-top-text {
+.about__top-text {
     position: absolute;
     left: 0;
     bottom: 0;
@@ -340,7 +353,7 @@ body {
     padding-bottom: 94px;
 }
 
-.team-title {
+.team__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -350,15 +363,15 @@ body {
     margin-bottom: 50px;
 }
 
-.team-list {
+.card-list {
     display: flex;
 }
 
-.team-item:not(:last-child) {
+.card-list__item:not(:last-child) {
     margin-right: 30px;
 }
 
-.team-subtitle {
+.card-list__subtitle {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -368,7 +381,7 @@ body {
     margin-bottom: 10px;
 }
 
-.team-text {
+.card-list__text {
     font-size: 16px;
     line-height: 1.18;
     text-align: center;
@@ -377,7 +390,7 @@ body {
     margin-bottom: 16px;
 }
 
-.team-item {
+.card-list__item {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -386,27 +399,27 @@ body {
     background-color: var(--first-background-color);
 }
 
-.team-content {
+.card-list__content {
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
-.team-soc-list {
+.socials {
     display: flex;
     justify-content: center;
 }
 
-.team-soc-item {
+.socials__item {
     width: 44px;
     height: 44px;
     margin-right: 10px;
 }
 
-.team-soc-item:last-child {
+.socials__item:last-child {
     margin-right: 0;
 }
 
-.team-soc-link {
+.socials__link {
     width: 100%;
     height: 100%;
     background-color: var(--first-background-color);
@@ -417,18 +430,25 @@ body {
     transition: background-color 250ms var(--timing-function);
 }
 
-.team-soc-icon {
-    fill: var(--icon-color);
+.socials__icon {
     transition: fill 250ms var(--timing-function);
 }
 
-.team-soc-link:hover,
-.team-soc-link:focus {
+.socials__icon--light {
+    fill: var(--third-text-color);
+}
+
+.socials__icon--dark {
+    fill: var(--icon-color);
+}
+
+.socials__link:hover,
+.socials__link:focus {
     background-color: var(--first-accent-color);
 }
 
-.team-soc-link:hover .team-soc-icon,
-.team-soc-link:focus .team-soc-icon {
+.socials__link:hover .socials__icon,
+.socials__link:focus .socials__icon {
     fill: var(--third-text-color);
 }
 
@@ -437,7 +457,7 @@ body {
     padding-bottom: 94px;
 }
 
-.clients-title {
+.clients__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -447,34 +467,34 @@ body {
     margin-bottom: 50px;
 }
 
-.clients-list {
+.clients__list {
     display: flex;
     justify-content: center;
 }
 
-.clients-item {
+.clients__item {
     width: 170px;
     height: 92px;
     margin-right: 30px;
 }
 
-.clients-item:last-child {
+.clients__item:last-child {
     margin-right: 0;
 }
 
-.clients-link {
+.clients__link {
     outline: transparent;
 }
 
-.clients-icon {
+.clients__icon {
     fill: var(--icon-color);
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     transition: fill 250ms var(--timing-function);
 }
 
-.clients-link:hover .clients-icon,
-.clients-link:focus .clients-icon {
+.clients__link:hover .clients__icon,
+.clients__link:focus .clients__icon {
     fill: var(--first-accent-color);
     border: 1px solid var(--first-accent-color);
     border-radius: 4px;
@@ -498,7 +518,6 @@ body {
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    color: var(--third-text-color);
     margin-bottom: 20px;
 }
 
@@ -506,19 +525,19 @@ body {
     font-style: normal;
 }
 
-.footer-list li:not(:last-child) {
+.footer-address__list li:not(:last-child) {
     margin-bottom: 9px;
 }
 
-.footer-link {
+.footer-address__link {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--third-text-color);
 }
 
-.footer-mail,
-.footer-tel {
+.footer-address__mail,
+.footer-address__tel {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -526,13 +545,13 @@ body {
     transition: color 250ms var(--timing-function);
 }
 
-.footer-mail:hover,
-.footer-tel:hover {
+.footer-address__mail:hover,
+.footer-address__tel:hover {
     color: var(--first-accent-color);
 }
 
-.footer-mail:focus,
-.footer-tel:focus {
+.footer-address__mail:focus,
+.footer-address__tel:focus {
     color: var(--first-accent-color);
 }
 
@@ -540,7 +559,7 @@ body {
     margin-left: 70px;
 }
 
-.footer-title {
+.footer-soc__title {
     margin-bottom: 20px;
     font-weight: 700;
     font-size: 14px;
@@ -550,21 +569,21 @@ body {
     color: var(--third-text-color);
 }
 
-.footer-soc-list {
+.footer-soc__list {
     display: flex;
 }
 
-.footer-soc-item {
+.footer-soc__item {
     width: 44px;
     height: 44px;
     margin-right: 10px;
 }
 
-.footer-soc-item:last-child {
+.footer-soc__item:last-child {
     margin-right: 0;
 }
 
-.footer-soc-link {
+.footer-soc__link {
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.1);
@@ -575,25 +594,16 @@ body {
     transition: background-color 250ms var(--timing-function);
 }
 
-.footer-soc-icon {
-    fill: var(--third-text-color);
-}
-
-.footer-soc-link:hover,
-.footer-soc-link:focus {
+.footer-soc__link:hover,
+.footer-soc__link:focus {
     background-color: var(--first-accent-color);
 }
 
-.footer-form-content {
+.footer-form {
     margin-left: auto;
 }
 
-.footer-form {
-    display: flex;
-    align-items: center;
-}
-
-.footer-form-title {
+.footer-form__title {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -603,7 +613,12 @@ body {
     margin-bottom: 20px;
 }
 
-.footer-form-input {
+.form-subscribe {
+    display: flex;
+    align-items: center;
+}
+
+.form-subscribe__input {
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: 0.03em;
@@ -619,19 +634,19 @@ body {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-form-input:hover,
-.footer-form-input:focus {
+.form-subscribe__input:hover,
+.form-subscribe__input:focus {
     border-color: var(--first-accent-color);
 }
 
-.footer-form-input::placeholder {
+.form-subscribe__input::placeholder {
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-form-btn {
+.form-subscribe__btn {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -650,12 +665,12 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-form-btn:hover,
-.footer-form-btn:focus {
+.form-subscribe__btn:hover,
+.form-subscribe__btn:focus {
     background-color: var(--second-accent-color);
 }
 
-.footer-form-icon {
+.form-subscribe__icon {
     margin-left: 10px;
 }
 
@@ -665,11 +680,11 @@ body {
     margin-bottom: 50px;
 }
 
-.filters-item:not(:last-child) {
+.filters-list__item:not(:last-child) {
     margin-right: 8px;
 }
 
-.filters-btn {
+.filters-list__btn {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -687,8 +702,8 @@ body {
         box-shadow 250ms var(--timing-function);
 }
 
-.filters-btn:hover,
-.filters-btn:focus {
+.filters-list__btn:hover,
+.filters-list__btn:focus {
     color: var(--third-text-color);
     background-color: var(--first-accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -700,7 +715,7 @@ body {
     padding-bottom: 94px;
 }
 
-.work-list {
+.grid {
     display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
@@ -708,25 +723,25 @@ body {
     padding: 0;
 }
 
-.work-item {
+.grid__item {
     margin-left: 30px;
     margin-top: 30px;
     flex-basis: calc((100% - 3*30px) / 3);
     background-color: #fff;
 }
 
-.work-link {
+.grid__link {
     transition: box-shadow 250ms var(--timing-function);
 }
 
-.work-link:hover,
-.work-link:focus {
+.grid__link:hover,
+.grid__link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.work-title {
+.grid-content__title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -734,12 +749,12 @@ body {
     color: var(--first-text-color);
 }
 
-.work-wrap {
+.grid-wrap {
     position: relative;
     overflow: hidden;
 }
 
-.wrap-text {
+.grid-wrap__text {
     position: absolute;
     top: 0;
     height: 100%;
@@ -753,19 +768,19 @@ body {
     transition: transform 250ms linear;
 }
 
-.work-link:hover .wrap-text,
-.work-link:focus .wrap-text {
+.grid__link:hover .grid-wrap__text,
+.grid__link:focus .grid-wrap__text {
     transform: translateY(0);
 }
 
-.work-text {
+.grid-content__text {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--second-text-color);
 }
 
-.work-content {
+.grid-content {
     border: 1px solid #EEEEEE;
     border-top: none;
     padding: 20px 24px;
@@ -980,3 +995,5 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: var(--second-accent-color);
 }
+
+
