--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,16 +1,3 @@
-.visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
-}
-
 .features {
     padding-top: 94px;
     padding-bottom: 47px;
@@ -18,6 +5,7 @@
 
 .features__list {
     display: flex;
+    @extend %list;
 }
 
 .icon-antenna::before {
