--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,6 @@
-@import "./utils/vars";
+@import "./utils/variables";
+@import "./utils/visually-hidden";
+@import "./utils/placeholders";
 @import "./base/reset";
 
 @import "./components/container";
