--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,36 +1,42 @@
 .clients {
     padding-top: 94px;
     padding-bottom: 94px;
-}
 
-.clients__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--first-text-color);
-    margin-bottom: 50px;
-}
+    &__title {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.16;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--first-text-color);
+        margin-bottom: 50px;
+    }
 
-.clients__list {
-    display: flex;
-    justify-content: center;
-    @extend %list;
+    &__list {
+        display: flex;
+        justify-content: center;
+    }
 }
 
 .clients__item {
     width: 170px;
     height: 92px;
     margin-right: 30px;
-}
 
-.clients__item:last-child {
-    margin-right: 0;
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 .clients__link {
     outline: transparent;
+
+    &:hover .clients__icon,
+    &:focus .clients__icon {
+        fill: var(--first-accent-color);
+        border: 1px solid var(--first-accent-color);
+        border-radius: 4px;
+    }
 }
 
 .clients__icon {
@@ -38,11 +44,4 @@
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     transition: fill 250ms var(--timing-function);
-}
-
-.clients__link:hover .clients__icon,
-.clients__link:focus .clients__icon {
-    fill: var(--first-accent-color);
-    border: 1px solid var(--first-accent-color);
-    border-radius: 4px;
 }
