--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,43 +1,15 @@
 .header {
     margin-bottom: 0;
     border-bottom: 1px solid #ECECEC;
-}
 
-.header__container {
-    display: flex;
-    align-items: center;
+    &__container {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .nav__list {
     display: flex;
-    @extend %list;
-}
-
-.logo {
-    font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    @extend %link;
-}
-
-.logo--light {
-    color: var(--third-text-color);
-}
-
-.logo--dark {
-    color: var(--first-text-color);
-}
-
-.header__logo {
-    margin-right: 93px;
-    padding-top: 24px;
-    padding-bottom: 24px;
-}
-
-.logo-accent {
-    color: var(--first-accent-color);
 }
 
 .nav__item:not(:last-child) {
@@ -54,17 +26,11 @@
     padding-top: 32px;
     padding-bottom: 32px;
     transition: color 250ms var(--timing-function);
-    
-    @extend %link;
-}
 
-.nav__link:hover,
-.nav__link:focus {
-    color: var(--first-accent-color);
-}
-
-.current {
-    color: var(--first-accent-color);
+    &:hover,
+    &:focus {
+        color: var(--first-accent-color);
+    }
 }
 
 .nav__link.current::after {
@@ -78,15 +44,45 @@
     bottom: -1px;
 }
 
+.logo {
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+
+    &--light {
+        color: var(--third-text-color);
+    }
+
+    &--dark {
+        color: var(--first-text-color);
+    }
+}
+
+.header__logo {
+    margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.logo-accent {
+    color: var(--first-accent-color);
+}
+
+.current {
+    color: var(--first-accent-color);
+}
+
+
+
 .connect__list {
     display: flex;
-    @extend %list;
 }
 
 .connect__mail,
 .connect__tel {
-    display: flex;
-    align-items: center;
+    @extend %align-list;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -95,17 +91,11 @@
     padding-top: 32px;
     padding-bottom: 32px;
     transition: color 250ms var(--timing-function);
-    @extend %link;
-}
 
-.connect__mail:hover,
-.connect__tel:hover {
-    color: var(--first-accent-color);
-}
-
-.connect__mail:focus,
-.connect__tel:focus {
-    color: var(--first-accent-color);
+    &:hover,
+    &:focus {
+        color: var(--first-accent-color);
+    }
 }
 
 .connect__item:not(:last-child) {
@@ -114,10 +104,10 @@
 
 .connect {
     margin-left: auto;
-}
 
-.connect__mail-icon,
-.connect__tel-icon {
-    fill: currentColor;
-    margin-right: 10px;
+    &__mail-icon,
+    &__tel-icon {
+        fill: currentColor;
+        margin-right: 10px;
+    }
 }
