--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,9 +1,4 @@
-%list {
-    list-style: none;
-    padding-left: 0;
-    margin: 0;
-}
-
-%link {
-    text-decoration: none;
+%align-list {
+    display: flex;
+    align-items: center;
 }
